replace cyan for infocolor in the css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,8 @@ h4 {
 .borde {
     height:0.15em;
     width:100%;
-    color:cyan;
-    background-color:cyan;
+    color:#17A2B8;
+    background-color:#17A2B8;
 }
 
 .card {
